--- a/index.html
+++ b/index.html
@@ -1134,10 +1134,9 @@
 
     <!-- HERO SECTION -->
     <section class="hero">
-        <!-- Placeholder for video - replace with actual video -->
         <div class="hero-overlay"></div>
-        <video class="hero-video" autoplay muted loop playsinline poster="/images/hero-poster.jpg">
-            <source src="/videos/hero.mp4" type="video/mp4">
+        <video class="hero-video" autoplay muted loop playsinline>
+            <source src="videos/hero.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
             <h1 class="hero-tagline animate-fade-in-up">
