Update story placeholders with realistic Turkish names

--- a/index.html
+++ b/index.html
@@ -1328,9 +1328,9 @@
                         <div class="story-play">▶</div>
                     </div>
                     <div class="story-content">
-                        <div class="story-quote">"Artık çocuklarımla koşabiliyorum"</div>
-                        <div class="story-author">Ayşe, 42</div>
-                        <div class="story-result">22 kg verdi</div>
+                        <div class="story-quote">"Torunlarımla oyun oynayabiliyorum artık"</div>
+                        <div class="story-author">Fatma Y., 58</div>
+                        <div class="story-result">32 kg verdi</div>
                     </div>
                 </div>
                 <div class="story-card" onclick="playStoryVideo(this)">
@@ -1339,8 +1339,8 @@
                         <div class="story-play">▶</div>
                     </div>
                     <div class="story-content">
-                        <div class="story-quote">"Enerji seviyem tamamen değişti"</div>
-                        <div class="story-author">Mehmet, 38</div>
+                        <div class="story-quote">"Diyabet ilaçlarımı bıraktım"</div>
+                        <div class="story-author">Ahmet K., 47</div>
                         <div class="story-result">28 kg verdi</div>
                     </div>
                 </div>
@@ -1350,9 +1350,9 @@
                         <div class="story-play">▶</div>
                     </div>
                     <div class="story-content">
-                        <div class="story-quote">"Şeker hastalığımı yendim"</div>
-                        <div class="story-author">Ali, 55</div>
-                        <div class="story-result">40 kg verdi</div>
+                        <div class="story-quote">"Özgüvenim geri geldi"</div>
+                        <div class="story-author">Elif S., 34</div>
+                        <div class="story-result">24 kg verdi</div>
                     </div>
                 </div>
                 <div class="story-card" onclick="playStoryVideo(this)">
@@ -1361,9 +1361,9 @@
                         <div class="story-play">▶</div>
                     </div>
                     <div class="story-content">
-                        <div class="story-quote">"Hayatım tamamen değişti"</div>
-                        <div class="story-author">Zeynep, 35</div>
-                        <div class="story-result">35 kg verdi</div>
+                        <div class="story-quote">"Merdiven çıkmak artık zor değil"</div>
+                        <div class="story-author">Mustafa B., 52</div>
+                        <div class="story-result">38 kg verdi</div>
                     </div>
                 </div>
             </div>
