--- a/index.html
+++ b/index.html
@@ -971,37 +971,32 @@
         }
 
         .team-avatar {
-            width: 100px;
-            height: 100px;
-            background: 
-                linear-gradient(135deg, var(--primary-light) 0%, var(--primary) 50%, var(--primary-dark) 100%),
-                radial-gradient(ellipse at 30% 30%, rgba(255,255,255,0.3) 0%, transparent 50%);
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             margin: 0 auto 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 2.5rem;
+            overflow: hidden;
             box-shadow: 0 10px 30px rgba(13, 115, 119, 0.2);
             position: relative;
+            border: 4px solid var(--primary);
+            transition: all 0.3s;
         }
 
-        .team-avatar::before {
-            content: '';
-            position: absolute;
-            top: -3px;
-            left: -3px;
-            right: -3px;
-            bottom: -3px;
-            background: linear-gradient(135deg, var(--primary), var(--accent));
-            border-radius: 50%;
-            z-index: -1;
-            opacity: 0;
-            transition: opacity 0.3s;
+        .team-avatar img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            filter: grayscale(20%);
+            transition: all 0.3s;
         }
 
-        .team-card:hover .team-avatar::before {
-            opacity: 1;
+        .team-card:hover .team-avatar {
+            border-color: var(--accent);
+            transform: scale(1.05);
+        }
+
+        .team-card:hover .team-avatar img {
+            filter: grayscale(0%);
         }
 
         .team-role {
@@ -1624,22 +1619,22 @@
             </p>
             <div class="team-grid">
                 <div class="team-card">
-                    <div class="team-avatar"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="16" r="8" stroke="#fff" stroke-width="2.5"/><path d="M10 42C10 34 16 28 24 28C32 28 38 34 38 42" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M20 16H28" stroke="#fff" stroke-width="2" stroke-linecap="round"/><path d="M24 12V20" stroke="#fff" stroke-width="2" stroke-linecap="round"/><circle cx="24" cy="36" r="3" stroke="#fff" stroke-width="1.5"/><path d="M24 33V30" stroke="#fff" stroke-width="1.5" stroke-linecap="round"/></svg></div>
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?w=200&h=200&fit=crop&crop=face" alt="Gastroenterolog"></div>
                     <div class="team-role">Gastroenterolog</div>
                     <div class="team-specialty">Sindirim Sistemi Uzmanı</div>
                 </div>
                 <div class="team-card">
-                    <div class="team-avatar"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="14" r="8" stroke="#fff" stroke-width="2.5"/><path d="M10 42C10 34 16 28 24 28C32 28 38 34 38 42" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M16 10C16 10 18 6 24 6C30 6 32 10 32 10" stroke="#fff" stroke-width="2" stroke-linecap="round"/><path d="M18 32L24 36L30 32" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="20" cy="14" r="1" fill="#fff"/><circle cx="28" cy="14" r="1" fill="#fff"/></svg></div>
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?w=200&h=200&fit=crop&crop=face" alt="Endokrinolog"></div>
                     <div class="team-role">Endokrinolog</div>
                     <div class="team-specialty">Hormon & Metabolizma</div>
                 </div>
                 <div class="team-card">
-                    <div class="team-avatar"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 28C8 28 8 36 24 36C40 36 40 28 40 28" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M6 28H42" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M24 36V40" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M18 40H30" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><circle cx="18" cy="22" r="3" stroke="#fff" stroke-width="2"/><circle cx="28" cy="20" r="2.5" stroke="#fff" stroke-width="2"/><path d="M22 18C22 18 24 12 24 10" stroke="#fff" stroke-width="2" stroke-linecap="round"/><path d="M24 10C26 12 30 14 32 18" stroke="#fff" stroke-width="2" stroke-linecap="round"/></svg></div>
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?w=200&h=200&fit=crop&crop=face" alt="Diyetisyen"></div>
                     <div class="team-role">Diyetisyen</div>
                     <div class="team-specialty">Beslenme Uzmanı</div>
                 </div>
                 <div class="team-card">
-                    <div class="team-avatar"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="10" r="4" stroke="#fff" stroke-width="2.5"/><path d="M24 14V28" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M10 22H38" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M16 22L16 18" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M32 22L32 18" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><rect x="8" y="18" width="4" height="8" rx="1" stroke="#fff" stroke-width="2"/><rect x="36" y="18" width="4" height="8" rx="1" stroke="#fff" stroke-width="2"/><path d="M18 28L14 38" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><path d="M30 28L34 38" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/></svg></div>
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=200&h=200&fit=crop&crop=face" alt="Egzersiz Fizyologu"></div>
                     <div class="team-role">Egzersiz Fizyologu</div>
                     <div class="team-specialty">Hareket & Performans</div>
                 </div>
