Add more specialists to team section (10 total)

--- a/index.html
+++ b/index.html
@@ -962,8 +962,8 @@
 
         .team-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 2rem;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 1.5rem;
         }
 
         .team-card {
@@ -1212,7 +1212,7 @@
             }
             
             .team-grid {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(3, 1fr);
             }
             
             .science-content {
@@ -1629,7 +1629,37 @@
                     <div class="team-specialty">Hormon & Metabolizma</div>
                 </div>
                 <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?w=200&h=200&fit=crop&crop=face" alt="Diyetisyen"></div>
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?w=200&h=200&fit=crop&crop=face" alt="İç Hastalıkları"></div>
+                    <div class="team-role">İç Hastalıkları</div>
+                    <div class="team-specialty">Dahiliye Uzmanı</div>
+                </div>
+                <div class="team-card">
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1537368910025-700350fe46c7?w=200&h=200&fit=crop&crop=face" alt="Kardiyolog"></div>
+                    <div class="team-role">Kardiyolog</div>
+                    <div class="team-specialty">Kalp & Damar Uzmanı</div>
+                </div>
+                <div class="team-card">
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?w=200&h=200&fit=crop&crop=face" alt="Nefrolog"></div>
+                    <div class="team-role">Nefrolog</div>
+                    <div class="team-specialty">Böbrek Hastalıkları Uzmanı</div>
+                </div>
+                <div class="team-card">
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1651008376811-b90baee60c1f?w=200&h=200&fit=crop&crop=face" alt="Ortopedist"></div>
+                    <div class="team-role">Ortopedist</div>
+                    <div class="team-specialty">Kas & İskelet Sistemi</div>
+                </div>
+                <div class="team-card">
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?w=200&h=200&fit=crop&crop=face" alt="Fizik Tedavi"></div>
+                    <div class="team-role">Fizik Tedavi Uzmanı</div>
+                    <div class="team-specialty">Rehabilitasyon</div>
+                </div>
+                <div class="team-card">
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1614608682850-e0d6ed316d47?w=200&h=200&fit=crop&crop=face" alt="Dermatolog"></div>
+                    <div class="team-role">Dermatolog</div>
+                    <div class="team-specialty">Cilt Sağlığı Uzmanı</div>
+                </div>
+                <div class="team-card">
+                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1607990281513-2c110a25bd8c?w=200&h=200&fit=crop&crop=face" alt="Diyetisyen"></div>
                     <div class="team-role">Diyetisyen</div>
                     <div class="team-specialty">Beslenme Uzmanı</div>
                 </div>
