--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@
             flex-direction: column;
             align-items: center;
             line-height: 1.2;
+            width: 100%;
+            max-width: 800px;
         }
 
         .rotating-container {
@@ -322,7 +324,8 @@
             display: inline-block;
             height: 1.15em;
             overflow: hidden;
-            min-width: 280px;
+            min-width: 100%;
+            width: 100%;
         }
 
         .rotating-word {
