Use SVG logo and make all logos much bigger

--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
         }
 
         .logo-img {
-            height: 70px;
+            height: 90px;
             width: auto;
         }
 
         .logo-img-large {
-            height: 80px;
+            height: 120px;
             width: auto;
         }
 
         .logo-img-hero {
-            height: 120px;
+            height: 180px;
             width: auto;
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
         }
 
         .nav {
@@ -1373,7 +1373,7 @@
     <header class="header">
         <div class="header-inner">
             <a href="/" class="logo">
-                <img src="images/logo.png" alt="UzunYaşa" class="logo-img">
+                <img src="images/logo.svg" alt="UzunYaşa" class="logo-img">
             </a>
             <nav class="nav">
                 <ul class="nav-links">
@@ -1403,7 +1403,7 @@
             <source src="videos/hero.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
-            <img src="images/logo.png" alt="UzunYaşa" class="logo-img-hero animate-fade-in-up">
+            <img src="images/logo.svg" alt="UzunYaşa" class="logo-img-hero animate-fade-in-up">
             <h1 class="hero-tagline animate-fade-in-up">
                 <div class="rotating-container">
                     <span class="rotating-word active">daha uzun</span>
@@ -1775,7 +1775,7 @@
         </video>
         <div class="section-overlay"></div>
         <div class="section-inner">
-            <img src="images/logo.png" alt="UzunYaşa" class="logo-img-large" style="margin-bottom: 1.5rem; filter: brightness(0) invert(1);">
+            <img src="images/logo.svg" alt="UzunYaşa" class="logo-img-large" style="margin-bottom: 1.5rem; filter: brightness(0) invert(1);">
             <h2 class="cta-title">Sağlıklı yaşam yolculuğunuza bugün başlayın</h2>
             <div class="cta-buttons">
                 <a href="/test" class="btn cta-btn-primary">
@@ -1797,7 +1797,7 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="/" class="logo" style="margin-bottom: 1rem;">
-                        <img src="images/logo.png" alt="UzunYaşa" class="logo-img-large">
+                        <img src="images/logo.svg" alt="UzunYaşa" class="logo-img-large">
                     </a>
                     <p class="footer-tagline">"Bilimle daha uzun, daha iyi yaşam"</p>
                     <div class="footer-badges">
