--- a/index.html
+++ b/index.html
@@ -1403,7 +1403,7 @@
             <source src="videos/hero.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
-            <img src="images/logo.svg" alt="UzunYaşa" class="logo-img-hero animate-fade-in-up">
+            <img src="images/logo-white.svg" alt="UzunYaşa" class="logo-img-hero animate-fade-in-up">
             <h1 class="hero-tagline animate-fade-in-up">
                 <div class="rotating-container">
                     <span class="rotating-word active">daha uzun</span>
@@ -1775,7 +1775,7 @@
         </video>
         <div class="section-overlay"></div>
         <div class="section-inner">
-            <img src="images/logo.svg" alt="UzunYaşa" class="logo-img-large" style="margin-bottom: 1.5rem; filter: brightness(0) invert(1);">
+            <img src="images/logo-white.svg" alt="UzunYaşa" class="logo-img-large" style="margin-bottom: 1.5rem;">
             <h2 class="cta-title">Sağlıklı yaşam yolculuğunuza bugün başlayın</h2>
             <div class="cta-buttons">
                 <a href="/test" class="btn cta-btn-primary">
