--- a/index.html
+++ b/index.html
@@ -485,6 +485,189 @@
             margin: 0 auto;
         }
 
+        /* ===== ECEM AI SECTION ===== */
+        .ecem-section {
+            padding: 5rem 2rem;
+            background: linear-gradient(135deg, #FFF7ED 0%, #FEF3C7 100%);
+        }
+
+        .ecem-inner {
+            max-width: 1100px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            align-items: center;
+        }
+
+        .ecem-badge {
+            display: inline-block;
+            background: var(--accent);
+            color: white;
+            padding: 0.4rem 1rem;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+
+        .ecem-title {
+            font-size: 2.5rem;
+            font-weight: 800;
+            color: var(--text-dark);
+            margin-bottom: 0.5rem;
+        }
+
+        .ecem-subtitle {
+            font-size: 1.2rem;
+            color: var(--accent);
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+
+        .ecem-description {
+            color: var(--text-medium);
+            font-size: 1.05rem;
+            line-height: 1.7;
+            margin-bottom: 1.5rem;
+        }
+
+        .ecem-features {
+            list-style: none;
+            margin-bottom: 2rem;
+        }
+
+        .ecem-features li {
+            padding: 0.5rem 0;
+            color: var(--text-dark);
+            font-weight: 500;
+        }
+
+        .ecem-btn {
+            background: linear-gradient(135deg, var(--accent) 0%, #F4A855 100%);
+            color: white;
+            padding: 1rem 2rem;
+            font-size: 1.1rem;
+            border-radius: 12px;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.3s;
+            box-shadow: 0 4px 15px rgba(232, 150, 62, 0.3);
+        }
+
+        .ecem-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(232, 150, 62, 0.4);
+        }
+
+        .ecem-visual {
+            display: flex;
+            justify-content: center;
+        }
+
+        .ecem-chat-preview {
+            background: white;
+            border-radius: 24px;
+            padding: 1.5rem;
+            width: 100%;
+            max-width: 380px;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.1);
+            border: 1px solid rgba(0,0,0,0.05);
+        }
+
+        .ecem-message {
+            display: flex;
+            gap: 0.75rem;
+            margin-bottom: 1rem;
+            animation: fadeInUp 0.5s ease forwards;
+            opacity: 0;
+        }
+
+        .ecem-message:nth-child(1) { animation-delay: 0.2s; }
+        .ecem-message:nth-child(2) { animation-delay: 0.6s; }
+        .ecem-message:nth-child(3) { animation-delay: 1s; }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .ecem-message.ecem-user {
+            flex-direction: row-reverse;
+        }
+
+        .ecem-avatar {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, var(--accent) 0%, #F4A855 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.2rem;
+            flex-shrink: 0;
+        }
+
+        .ecem-bubble {
+            background: #F3F4F6;
+            padding: 0.75rem 1rem;
+            border-radius: 16px;
+            font-size: 0.95rem;
+            color: var(--text-dark);
+            max-width: 220px;
+        }
+
+        .ecem-message.ecem-user .ecem-bubble {
+            background: var(--primary);
+            color: white;
+            border-bottom-right-radius: 4px;
+        }
+
+        .ecem-message.ecem-bot .ecem-bubble {
+            border-bottom-left-radius: 4px;
+        }
+
+        .ecem-typing {
+            display: flex;
+            gap: 4px;
+            padding: 0.75rem 1rem;
+            background: #F3F4F6;
+            border-radius: 16px;
+            width: fit-content;
+            margin-left: 44px;
+            animation: fadeInUp 0.5s ease forwards;
+            animation-delay: 1.4s;
+            opacity: 0;
+        }
+
+        .ecem-typing span {
+            width: 8px;
+            height: 8px;
+            background: var(--text-muted);
+            border-radius: 50%;
+            animation: bounce 1.4s infinite ease-in-out both;
+        }
+
+        .ecem-typing span:nth-child(1) { animation-delay: -0.32s; }
+        .ecem-typing span:nth-child(2) { animation-delay: -0.16s; }
+
+        @keyframes bounce {
+            0%, 80%, 100% { transform: scale(0); }
+            40% { transform: scale(1); }
+        }
+
+        @media (max-width: 768px) {
+            .ecem-inner {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+            .ecem-title { font-size: 2rem; }
+            .ecem-visual { order: -1; }
+        }
+
         /* ===== GOALS SECTION ===== */
         .goals-section {
             position: relative;
@@ -1391,7 +1574,7 @@
                     <li><a href="/bilim" class="nav-link">Bilim</a></li>
                     <li><a href="/hakkimizda" class="nav-link">Hakkımızda</a></li>
                 </ul>
-                <a href="/test" class="btn btn-primary">Teste Başla</a>
+                <a href="pages/test.html" class="btn btn-primary">Teste Başla</a>
             </nav>
         </div>
     </header>
@@ -1418,7 +1601,7 @@
                 Beslenme, egzersiz ve tedavi seçenekleri hakkında güvenilir bilgi.
             </p>
             <div class="hero-buttons animate-fade-in-up delay-2">
-                <a href="/test" class="btn hero-btn-primary">
+                <a href="pages/test.html" class="btn hero-btn-primary">
                     <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"><circle cx="24" cy="24" r="16" stroke="currentColor" stroke-width="2.5"/><circle cx="24" cy="24" r="10" stroke="currentColor" stroke-width="2"/><circle cx="24" cy="24" r="4" stroke="currentColor" stroke-width="2"/></svg> Bana Uygun Ne? — Teste Başla
                 </a>
                 <a href="#kesfet" class="btn hero-btn-secondary">
@@ -1445,6 +1628,47 @@
                 <div class="stat-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 10C8 10 14 8 24 12C34 8 40 10 40 10V36C40 36 34 34 24 38C14 34 8 36 8 36V10Z" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M24 12V38" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M14 14L20 16" stroke="#0D7377" stroke-width="1.5" stroke-linecap="round"/><path d="M14 20L20 22" stroke="#0D7377" stroke-width="1.5" stroke-linecap="round"/><path d="M14 26L20 28" stroke="#0D7377" stroke-width="1.5" stroke-linecap="round"/></svg></div>
                 <div class="stat-value">50+ Rehber</div>
                 <div class="stat-label">Ücretsiz erişim</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ECEM AI ASSISTANT SECTION -->
+    <section class="ecem-section">
+        <div class="ecem-inner">
+            <div class="ecem-content">
+                <div class="ecem-badge">🤖 Yapay Zeka Destekli</div>
+                <h2 class="ecem-title">Merhaba, ben Ecem!</h2>
+                <p class="ecem-subtitle">Size özel sağlık önerileri için yapay zeka asistanınız</p>
+                <p class="ecem-description">
+                    2 dakikalık kısa bir sohbetle sağlık durumunuzu değerlendirip, 
+                    size en uygun rehberleri, araçları ve tedavi seçeneklerini önereceğim.
+                </p>
+                <ul class="ecem-features">
+                    <li>✓ Kişiselleştirilmiş sağlık skoru</li>
+                    <li>✓ Risk değerlendirmesi</li>
+                    <li>✓ Size özel içerik önerileri</li>
+                </ul>
+                <a href="pages/test.html" class="btn ecem-btn">
+                    👩‍⚕️ Ecem ile Konuş
+                </a>
+            </div>
+            <div class="ecem-visual">
+                <div class="ecem-chat-preview">
+                    <div class="ecem-message ecem-bot">
+                        <span class="ecem-avatar">👩‍⚕️</span>
+                        <span class="ecem-bubble">Merhaba! Size birkaç soru soracağım 😊</span>
+                    </div>
+                    <div class="ecem-message ecem-user">
+                        <span class="ecem-bubble">Kilo vermek istiyorum</span>
+                    </div>
+                    <div class="ecem-message ecem-bot">
+                        <span class="ecem-avatar">👩‍⚕️</span>
+                        <span class="ecem-bubble">Harika! Aktivite düzeyiniz nasıl?</span>
+                    </div>
+                    <div class="ecem-typing">
+                        <span></span><span></span><span></span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -1512,7 +1736,7 @@
                     Kilo yönetimi hedeflerinize göre size en uygun yöntemi bulun. 
                     Diyet mi? Egzersiz mi? İlaç mı? Prosedür mü? 3 dakikada öğrenin.
                 </p>
-                <a href="/test" class="btn btn-lg">Teste Başla →</a>
+                <a href="pages/test.html" class="btn btn-lg">Teste Başla →</a>
             </div>
             <div class="tools-grid">
                 <a href="/araclar/bmi" class="tool-card">
@@ -1778,7 +2002,7 @@
             <img src="images/logo-white.svg" alt="UzunYaşa" class="logo-img-large" style="margin-bottom: 1.5rem;">
             <h2 class="cta-title">Sağlıklı yaşam yolculuğunuza bugün başlayın</h2>
             <div class="cta-buttons">
-                <a href="/test" class="btn cta-btn-primary">
+                <a href="pages/test.html" class="btn cta-btn-primary">
                     <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"><circle cx="24" cy="24" r="16" stroke="currentColor" stroke-width="2.5"/><circle cx="24" cy="24" r="10" stroke="currentColor" stroke-width="2"/><circle cx="24" cy="24" r="4" stroke="currentColor" stroke-width="2"/></svg> Bana Uygun Ne? — Teste Başla
                 </a>
             </div>
@@ -1822,7 +2046,7 @@
                     <ul class="footer-links">
                         <li><a href="/araclar/bmi">BMI Hesapla</a></li>
                         <li><a href="/araclar/kalori">Kalori Hesapla</a></li>
-                        <li><a href="/test">Tedavi Testi</a></li>
+                        <li><a href="pages/test.html">Tedavi Testi</a></li>
                         <li><a href="/araclar/bel-boy">Bel/Boy Oranı</a></li>
                     </ul>
                 </div>
